# arcadia

./: .coderabbit.yaml  .gitignore  .rustfmt.toml  Cargo.toml  backup-cron.sh  backup-entrypoint.sh  backup.conf.example  backup.sh  compose.yml  ergo-conf.example.yaml
backend/api/: .env.ci  .env.docker  .env.example  Cargo.toml  Dockerfile
backend/api/.sqlx/: query-003d6526c87b8e9de18ab51d1a470c703efdec37e746a2b4317c504f53235987.json  query-007c84a6c0a0e09664cc7650687333850c4ec44ac12cab337b09942716c037bc.json  query-00bf692d0a9074ab2fc6b6d279595b1e75f7dd794332887f3cc269350d48b120.json  query-013778712e171b54ebbfc9b6077a24113ee333b0d750880acf67e3430ef568b2.json  query-03c21694eba2c6988fc49cb41d00470eba93c3565ba3aa6d0cf9e6214988f11b.json  query-0425c5103ebcc7a5ea5ecb2ef92119b4c2bdfac8d93752084dff575fb8fdfe9a.json  query-045b0160421999640271c1f6d481289c7d8e4fc08a9b14fe86fa98fdea3f35e5.json  query-06079a020ad1b1a886b1903ab83673d9bfccd3a0c9e6ff1f2678fa66bb67afe6.json  query-0d572c93a8aca61271692cb50c8bf990782d0a8229514d9c8669b8c755ca87b4.json  query-0e1ebdac1caa25c18bc1893ee2542d6ccc6dc820e68a6548124b0861474e247f.json  query-0e5bd444b8e976235adef4c4d46bc9a55894051be366cc3186c43c365851ef8b.json  query-0f86be81ff79caa015a1822a2e884d21323dd71f3d2bc8b420e3588489913c50.json  query-13cde123882345feae67459664692d5b0a202bde0f54b301cfa8805b3694e3f9.json  query-145cef71684ce4650645feb744974356c2306907385f1407382d37605532982f.json  query-15b4283d243fd5adc9c74189d02bbb5cd5db868b1f2ed856ec8995689dacf5e3.json  query-168361f135ba2ea642ce12377d2a08f84b9a4baa3e196f5c0a8e4cf40a7a8dac.json  query-170973165b81ca0d7b1a58460c3f946f28169a7ffbc01b49afec1bf87ef03507.json  query-17f997aede98327f6f02190532e40fd82032c2f0ba25974f9cfd10c40a1eef08.json  query-18387af564b2c7e4e41288ee999ecb69de7082aed9a8cab89581c6d6c4c02a54.json  query-19e9cc9934bd9595907ac1b762cb7b6429217c2aef5f2119a9de529006f369d6.json  query-19f9a9ff4f6659a417104c6a66f1eee44214c6eb4fb41793eb36da2fc735b96a.json  query-1a3183bcca1133915fc1e5d0de03928e84222f13d4607d70c191d7f649752aac.json  query-1ae9475775f638b880e2986b3b290dab403d043a8ec3e8b5363d6534e88a5e4d.json  query-1c14afa723dbdaad2075f68b88e5a3bf833dfce2a5e3d1265f169fd5986f2b8e.json  query-1ce295950b07b04fbcc1cc3d9e46a0081d307d91a69926041534aa57035e809a.json  query-1e628314d27e42dc2919bf7042c31b42434dac5403c22092bdb502296bcb9794.json  query-1eb0b657f71ab7d336e64e6b9754685991e8907362308f788fd813156c6811ef.json  query-1ebd84f7cc3f9c13b1f588e6eec98306a3dd6d66ec2cff347e75c03bdffc0d4a.json  query-20e26f6322732a557e12e889cd601e5ed75c97278fafeb321651e073dfd7a163.json  query-225c97510bce3cc5f8e54d4298478d1084c12ff16349610365a63b84a9898498.json  query-2298a3da0498372e96903198b706bc150c7f5f51bd12836e583732bfd3122fdf.json  query-241d5b7076b2bb60c1eae4d1a1a370289fd13371ec011a9eed3f17572ca8a9ff.json  query-24c90fcd2c9d250461f40481e22d42e8e550b8c60c04221f64b001e16afe21a8.json  query-2651f82da58c8b39ba29f6c01caabcb0f49737a47ee4432de6c952b6ad49a116.json  query-2670fda95d1093d02e1981b88bbfa823ea5fe69488f66d1f141150160373c32d.json  query-28277d5ac1ecdf643bd9053c2e797a09eeaf7bc6b2a987c0025bfdf31600575c.json  query-293e048426d9fe52d4e484da212758d0afd92ebb9c74db904ea10adebe00f1cc.json  query-298d494c3f5edaae1df96b8bc56d45ed7bfc90e1e3cfa4b243a2e21b72078190.json  query-29baf738726abd406e411afb4c0af312ad748548c1b6589c82d8090851a8e12b.json  query-2c69e15f31de9fc456939274ff1bec03793e0cbb8adf594ba9a9c09b6b135f0c.json  (+162 more)
backend/api/src/: api_doc.rs  env.rs  lib.rs  main.rs  routes.rs
backend/api/tests/: common.rs  mock_redis.rs  test_announce.rs  test_approved_image_hosts.rs  test_arcadia_settings.rs  test_artist.rs  test_artist_peer_stats.rs  test_auth.rs  test_auth_validations.rs  test_ban_inactive_users.rs  test_bonus_points.rs  test_bonus_points_logs.rs  test_change_user_password.rs  test_collage.rs  test_conversation.rs  test_css_sheets.rs  test_donations.rs  test_edition_group.rs  test_expired_warnings.rs  test_forum_category.rs  test_forum_delete.rs  test_forum_poll.rs  test_forum_post.rs  test_forum_read_markers.rs  test_forum_reorder.rs  test_forum_restricted_sub_category.rs  test_forum_stats.rs  test_forum_sub_category.rs  test_forum_thread.rs  test_gift.rs  test_http_proxy.rs  test_mass_conversation.rs  test_notifications.rs  test_recompute_cached_amounts.rs  test_search_conversations.rs  test_search_users.rs  test_search_wiki.rs  test_seeding_size.rs  test_series.rs  test_shop.rs  (+24 more)
backend/common/: Cargo.toml
backend/periodic-tasks/: .env.ci  .env.example  Cargo.toml
backend/periodic-tasks/.sqlx/: query-00109e87a74e04f859bda10cd5964fa186448ce409585f501eb01b60dcc6b3e3.json  query-01944a9fa9a45cdfe6a5b982d5831427dc33e8e4c4220a49005d2cce31efa536.json  query-02eb2eb30568da8bb0a04e075d0b1d5d30c1cade1015335dfe39e3792777ca21.json  query-034a1348aa5cdf5cdd96cf31984ae1b1d341dbc28fda2830bd9afdfce25d99cd.json  query-040aaa8071da22561bf3e538b9fc6ced4e80202f1d8540fab8ae90200f82c610.json  query-045b0160421999640271c1f6d481289c7d8e4fc08a9b14fe86fa98fdea3f35e5.json  query-046a01bd4bd7d127e943ecebd29b56a0b7954385b0843cdb7c650958bf1f2f61.json  (+273 more)
backend/periodic-tasks/src/: env.rs  (+2 more)
shared/: Cargo.toml
shared/.sqlx/: query-6c4a5f875d86d837493c8bf2a8e4f6fb93f4e50dce73ca6d07d42df32a80308a.json  query-8e96eb993e040bbd9a30604816581004f0dc1de2b383bafeb4ae60004e2a5206.json
shared/src/: lib.rs  telemetry.rs  utils.rs
tracker/arcadia_tracker/: Cargo.toml  Dockerfile
(+1709 files in other folders)
