[package]
name = "arcadia-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "2.14.0", default-features = false, features = ["std", "serde"] }
anyhow = { version = "1.0.102", default-features = true, features = ["std"] }
sqlx = { version = "0.9", features = [ "runtime-tokio", "postgres", "chrono", "ipnetwork" ] }
thiserror = { version = "2.0.18", default-features = false }
chrono = { version = "0.4.44", default-features = false, features = ["serde"] }
ringmap = { version = "0.2.5", features = ["serde"] }
actix-web = "4"
log = "0.4"
tracing = "0.1"
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "trace", "logs", "metrics"] }
opentelemetry-appender-tracing = "0.32"
tracing-opentelemetry = { version = "0.33", features = ["metrics"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
parking_lot = "0.12.5"
utoipa = { version = "5.5.0", features = ["actix_extras"] }
