[package]
name = "arcadia-api"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
actix-web = "4"
async-stream = "0.3"
base64 = "0.22"
actix-web-lab = "0.26.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["preserve_order"]}
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
futures-util = "0.3.32"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
argon2 = "0.5.3"
subtle = "2"
futures = "0.3"
rand = "0.10.1"
bip_metainfo = "0.12.0"
serde_bytes = "0.11"
actix-multipart = "0.7.2"
actix-files = "0.6.10"
reqwest = { version = "0.12", features = ["json"] }
actix-cors = "0.7.1"
actix-http = "3.12.1"
tracing = "0.1"
tracing-actix-web = "0.7"
thiserror = "2.0.18"
utoipa = { version = "5.5.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web", "debug-embed"] }
utoipa-actix-web = "0.1.2"
serde_bencode = "0.2.4"
actix-web-httpauth = "0.8.2"
strum = { version = "0.28", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
lettre = "0.11"
log = "0.4"
regex = "1.12.3"
musicbrainz_rs = { version = "0.13.0", features = ["async"] }
tmdb-api = "1.0.0-alpha.5"
envconfig = "0.11.1"
dotenvy = "0.15.7"
arcadia-common = { path = "../common"}
arcadia-storage = { path = "../storage"}
arcadia-periodic-tasks = { path = "../periodic-tasks"}
arcadia-shared = { path = "../../shared" }
serde_urlencoded = "0.7.1"
serde_qs = "1.1"
url = "2"

[dev-dependencies]
actix-multipart-rfc7578 = "0.11.0"
bytes = "1.11.1"
sqlx = { version = "0.9", features = [ "runtime-tokio", "postgres", "chrono", "ipnetwork" ] }
redis = "1.2.1"
urlencoding = "2.1"
