[package]
name = "arcadia-periodic-tasks"
version = "0.1.0"
edition = "2024"

[dependencies]
envconfig = "0.11.1"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "fs"] }
tokio-cron-scheduler = "0.15"
arcadia-storage = { path = "../storage"}
arcadia-common = { path = "../common"}
arcadia-shared = { path = "../../shared"}
reqwest = "0.12"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.9", features = [ "runtime-tokio", "postgres", "chrono", "macros" ] }
serde_json = "1"
