[package]
name = "arcadia_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
envconfig = "0.11.1"
dotenvy = "0.15.7"
utoipa = { version = "5.5.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web", "debug-embed"] }
utoipa-actix-web = "0.1.2"
tokio = { version = "1.52.3", default-features = false, features = ["rt-multi-thread", "macros", "signal", "sync"] }
tracing = "0.1"
tracing-actix-web = "0.7"
thiserror = "2.0.18"
actix-web-httpauth = "0.8.2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.28", features = ["derive", "std"] }
log = "0.4"
serde_bencode = "0.2.4"
anyhow = { version = "1.0.102", default-features = true, features = ["std"] }
arcadia-shared = { path = "../../shared" }
opentelemetry = { version = "0.32", features = ["metrics"] }
parking_lot = "0.12.5"
percent-encoding = "2.3.2"
rand = { version = "0.10.1", default-features = false, features = ["alloc", "thread_rng"] }
chrono = { version = "0.4.44", default-features = false, features = ["serde"] }
sqlx = { version = "0.9", features = [ "runtime-tokio", "postgres", "chrono", "ipnetwork" ] }

[dev-dependencies]
actix-http = "3.12.1"
